--- a/css/main.css
+++ b/css/main.css
@@ -41,12 +41,13 @@
     justify-content: space-between;
 }
                                                         /* LOGO */
-.logo {
+.logo a {
     text-transform: uppercase;
     cursor: pointer;
     border: 2px solid #fcfff5;
     padding: 5px 10px;
-    border-radius: 5px ;
+    border-radius: 5px;
+    color: #fcfff5;
 
 }
                                                         /* TOGGLE */
